--- a/index.html
+++ b/index.html
@@ -487,35 +487,18 @@
                  class="w-full slider"/>
         </div>
 
-        <!-- Voxelization Controls -->
+        <!-- Voxelization Controls (Single Scene) -->
         <div id="single-scene-voxel-controls" class="space-y-3">
-          <div class="border-t border-white/10 pt-3">
-            <div class="flex items-center justify-between mb-3">
-              <span class="text-sm text-white/80">Show Voxels</span>
-              <label class="inline-flex items-center cursor-pointer">
-                <div class="relative">
-                  <input id="single-scene-toggle-voxels" type="checkbox" class="sr-only peer" checked>
-                  <div class="w-9 h-5 bg-white/10 peer-checked:bg-blue-500/80 rounded-full relative transition"></div>
-                  <div class="absolute top-0.5 left-0.5 w-4 h-4 bg-white rounded-full transition-transform duration-300 ease-in-out peer-checked:translate-x-4"></div>
-                </div>
-              </label>
+          <div class="border-t border-white/10 pt-3 space-y-3">
+            <div class="flex items-center justify-between">
+              <span class="text-sm text-white/80">Rendering Mode</span>
+              <span class="text-[11px] text-white/60">
+                Use <b>＋ Options</b> → <b>Voxels</b> / <b>Minecraft</b>
+              </span>
             </div>
-            <!-- Radius (meters) -->
-            <!-- Single Scene: Minecraft textures toggle -->
-            <div class="flex items-center justify-between mb-2">
-              <span class="text-sm text-white/80">Minecraft textures</span>
-              <label class="inline-flex items-center cursor-pointer">
-                <div class="relative">
-                  <input id="single-scene-toggle-mc" type="checkbox" class="sr-only peer">
-                  <div class="w-9 h-5 bg-white/10 peer-checked:bg-green-500/80 rounded-full relative transition"></div>
-                  <div class="absolute top-0.5 left-0.5 w-4 h-4 bg-white rounded-full transition-transform duration-300 ease-in-out peer-checked:translate-x-4"></div>
-                </div>
-              </label>
-            </div>
-            <div class="text-xs opacity-60 -mt-1 mb-2">Toggle MC atlas (keeps voxel colors off).</div>
 
             <!-- Radius (meters) -->
-            <div class="mb-3">
+            <div class="mb-1">
               <label for="single-scene-radius" class="block text-sm font-medium text-white/80 mb-1">Radius</label>
               <input id="single-scene-radius" type="range" min="100" max="3000" step="50" value="500" class="w-full slider slider-lg">
               <div class="flex justify-between text-xs opacity-60 mt-1">
@@ -525,8 +508,8 @@
               </div>
             </div>
 
-            <!-- SSE Slider (High ↔ Low) -->
-            <div id="single-scene-sse-row" class="mb-3">
+            <!-- SSE -->
+            <div id="single-scene-sse-row" class="mb-1">
               <label for="single-scene-sse" class="block text-sm font-medium text-white/80 mb-1">Screen Space Error (SSE)</label>
               <input id="single-scene-sse" type="range" min="2" max="64" value="20" class="w-full slider slider-lg">
               <div class="flex justify-between text-xs opacity-60 mt-1">
@@ -537,7 +520,7 @@
             </div>
 
             <!-- Rotation (Y) -->
-            <div class="mb-3">
+            <div class="mb-1">
               <label for="single-scene-rot" class="block text-sm font-medium text-white/80 mb-1">Rotation (Y)</label>
               <input id="single-scene-rot" type="range" min="0" max="360" step="1" value="0" class="w-full slider slider-lg">
               <div class="flex justify-between text-xs opacity-60 mt-1">
@@ -545,8 +528,8 @@
               </div>
             </div>
 
-            <!-- Debug Tiles -->
-            <div id="single-scene-debug-row" class="mb-3">
+            <!-- Debug tiles -->
+            <div id="single-scene-debug-row" class="mb-1">
               <div class="flex items-center justify-between">
                 <label class="block text-sm font-medium text-white/80">Debug Tiles</label>
                 <label class="inline-flex items-center cursor-pointer">
@@ -560,7 +543,8 @@
               <div class="text-xs opacity-60 mt-1">Show tile bounds/helpers in the Single Scene viewer.</div>
             </div>
 
-            <div>
+            <!-- Resolution -->
+            <div class="mt-2">
               <label class="block text-sm font-medium text-white/80 mb-2">Voxel Resolution</label>
               <div class="grid grid-cols-2 gap-1 bg-white/5 rounded-lg p-1 mb-2">
                 <button class="single-scene-res-pill rounded py-1.5 text-xs opacity-80 hover:bg-white/10" data-res="32">Low</button>
@@ -571,8 +555,6 @@
               <input id="single-scene-res-fine" type="range" min="8" max="512" value="64" class="w-full slider slider-lg">
               <div class="text-xs opacity-60 mt-1">Fine-tune resolution</div>
             </div>
-
-            <!-- Generate button removed: the 'Voxels' toggle will auto-voxelize -->
           </div>
         </div>
 
