--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@
           </div>
           <div class="relative">
             <input id="google-api-key" class="w-full rounded-xl bg-white/10 px-3 py-3 md:py-2 pr-16 outline-none mobile-text"
-                   placeholder="Google Photoreal Tiles API key"/>
+                   placeholder="Google Photoreal Tiles API key"
+                  value="AIzaSyCxqt6c6a0Az1HZ8Xv3PN1AcSpXhNkPy8k"/>
             <button id="save-settings" class="absolute right-2 top-1/2 -translate-y-1/2 rounded-lg bg-white/10 hover:bg-white/20 px-3 py-2 text-xs mobile-button">Save</button>
           </div>
           <div class="text-[11px] opacity-60 leading-4 mt-1">Stored locally in this browser.</div>
@@ -593,7 +594,7 @@
   </div>
 
   <!-- Hidden compat fields expected by map.js -->
-  <input id="lat-lng" type="hidden" value="37.7749,-122.4194">
+  <input id="lat-lng" type="hidden" value="48.85837,2.29448">
   <input id="sse" type="hidden" value="20">
   <button id="fetch" class="hidden"></button>
   <pre id="fetch-log" class="hidden"></pre>
