--- a/index.html
+++ b/index.html
@@ -3,7 +3,35 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
-  <title>World-Voxel Map</title>
+  <title>Voxel Earth Web</title>
+  <meta name="description" content="Voxel Earth Web is an educational photogrammetry explorer that streams Google Photorealistic 3D Tiles, visualizes voxel workflows, and exports scenes directly from the browser.">
+  <meta name="theme-color" content="#0b0e11">
+  <meta name="color-scheme" content="dark">
+  <meta name="application-name" content="Voxel Earth Web">
+  <meta name="apple-mobile-web-app-title" content="Voxel Earth Web">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="msapplication-TileColor" content="#0b0e11">
+
+  <link rel="manifest" href="/icons/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/icons/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/icons/android-chrome-512x512.png">
+  <link rel="shortcut icon" href="/icons/favicon.ico">
+
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Voxel Earth Web">
+  <meta property="og:title" content="Voxel Earth Web">
+  <meta property="og:description" content="Voxel Earth Web is an educational photogrammetry explorer that streams Google Photorealistic 3D Tiles, visualizes voxel workflows, and exports scenes directly from the browser.">
+  <meta property="og:image" content="/icons/coverwithattribution.jpg">
+  <meta property="og:image:alt" content="Voxel Earth preview banner showcasing photorealistic tiles and voxel overlays.">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Voxel Earth Web">
+  <meta name="twitter:description" content="Voxel Earth Web is an educational photogrammetry explorer that streams Google Photorealistic 3D Tiles, visualizes voxel workflows, and exports scenes directly from the browser.">
+  <meta name="twitter:image" content="/icons/coverwithattribution.jpg">
+  <meta name="twitter:image:alt" content="Voxel Earth preview banner showcasing photorealistic tiles and voxel overlays.">
 
   <!-- Tailwind + Inter + Material Symbols + Leaflet -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
