Service worker patch

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
           <div class="relative">
             <input id="google-api-key" class="w-full rounded-xl bg-white/10 px-3 py-3 md:py-2 pr-16 outline-none mobile-text"
                    placeholder="Google Photoreal Tiles API key"
-                  value="AIzaSyCxqt6c6a0Az1HZ8Xv3PN1AcSpXhNkPy8k"/>
+                  value=""/>
             <button id="save-settings" class="absolute right-2 top-1/2 -translate-y-1/2 rounded-lg bg-white/10 hover:bg-white/20 px-3 py-2 text-xs mobile-button">Save</button>
           </div>
           <div class="text-[11px] opacity-60 leading-4 mt-1">Stored locally in this browser.</div>
